--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,14 @@
 
   </div>
   <div class="main">
-    <iframe #aspectRatio height="500" width="200"></iframe>
+    <div class="editor-nav">
+      <button>Add</button>
+      <button>Delete</button>
+      <button>Undo</button>
+      <button>Redo</button>
+    </div>
+    <div class="iframe-wrapper">
+      <iframe #aspectRatio ></iframe>
+    </div>
   </div>
 </div>
