--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,12 @@
   background: red;
 }
 
+.logo { 
+  height: 100%;
+  width: 300px;
+  border-right: 1px solid white;
+}
+
 .layout {
   display: flex;
   flex-direction: row;
@@ -21,13 +27,41 @@
   width: 300px;
 }
 .main { 
-  flex: 1; position: relative;
-  align-items: middle;
-  padding: 16px;
+  flex: 1;
+  position: relative;
+}
+
+.editor-nav {
+  padding: 4px 16px;
+  position: relative;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.05);
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+}
+
+.iframe-wrapper {
+  flex: 1;
+  width: calc(100% - 32px);
+  margin: 16px;
+}
+
+button {
+  height: 32px;
+  border: 0;
+  padding: 0 1.5em;
+  background: rgba(0,0,0,0.1);
+  opacity: 0.8;
+}
+
+button:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 iframe { 
-  border: 0;
-  width: 100%;
   height: 100%;
+  width: 100%;
+  border: 0;
 }
