--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       <button>Redo</button>
     </div>
     <div class="iframe-wrapper">
-      <iframe #aspectRatio ></iframe>
+      <iframe height="450" width="800" #aspectRatio ></iframe>
     </div>
   </div>
 </div>
