--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="logo"></div>
+  <div class="logo" (click)="collapsed = !collapsed"></div>
 </div>
 <div class="layout">
   <div class="sidebar">
