--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,6 +16,7 @@
 
 .logo { 
   height: 100%;
+  box-sizing: border-box;
   width: var(--sidebar-width);
   border-right: 1px solid white;
 }
@@ -29,6 +30,7 @@
 .sidebar {
   border-right: 1px solid rgba(0,0,0,0.2);
   width: var(--sidebar-width);
+  box-sizing: border-box;
 }
 .main { 
   flex: 1;
@@ -45,6 +47,7 @@
   display: flex;
   flex-direction: row;
   gap: 4px;
+  box-sizing: border-box;
 }
 
 .iframe-wrapper {
