--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
     </div>
     <div class="iframe-wrapper">
       <iframe height="450" width="800" #aspectRatio ></iframe>
+      <div #mask class="aspect-ratio-mask"></div>
     </div>
   </div>
 </div>
