move aspect-ratio to a component WIP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,9 @@
       <button>Redo</button>
     </div>
     <div class="iframe-wrapper">
-      <iframe height="450" width="800" #aspectRatioFrame ></iframe>
-      <div #mask class="aspect-ratio-mask"></div>
+      <app-aspect-ratio>
+        ok
+      </app-aspect-ratio>
     </div>
   </div>
 </div>
