--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,17 @@
       <button>Undo</button>
       <button>Redo</button>
     </div>
-    <div class="iframe-wrapper">
-      <app-aspect-ratio>
-        ok
-      </app-aspect-ratio>
+    <div class="wrapper">
+      <div>
+        <app-aspect-ratio>
+          ok
+        </app-aspect-ratio>
+      </div>
+      <div>
+        <app-aspect-ratio>
+          ok
+        </app-aspect-ratio>
+      </div>
     </div>
   </div>
 </div>
