add multiline example

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -59,6 +59,10 @@
   box-sizing: content-box;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+}
+.wrapper > *  {
+  flex: 1;
 }
 
 button {
