--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,5 +24,27 @@
         </app-aspect-ratio>
       </div>
     </div>
+    <div class="wrapper">
+      <app-aspect-ratio>
+        ok
+      </app-aspect-ratio>
+    </div>
+    <div class="wrapper">
+      <div>
+        <app-aspect-ratio>
+          ok
+        </app-aspect-ratio>
+      </div>
+      <div>
+        <app-aspect-ratio>
+          ok
+        </app-aspect-ratio>
+      </div>
+      <div>
+        <app-aspect-ratio>
+          ok
+        </app-aspect-ratio>
+      </div>
+    </div>
   </div>
 </div>
