add resizing example with canvas element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
     </div>
     <div class="wrapper">
       <div>
-        <app-aspect-ratio>
-          ok
+        <app-aspect-ratio (resized)="resizeElement($event, canvas)">
+          <canvas #canvas></canvas>
         </app-aspect-ratio>
       </div>
       <div>
