bind options for ratio & alignement

--- a/src/app/aspect-ratio/aspect-ratio.component.css
+++ b/src/app/aspect-ratio/aspect-ratio.component.css
@@ -13,6 +13,6 @@ iframe {
 
 .aspect-ratio-mask {
   position: absolute;
-  background: rgba(0,0,0,0.05);
+  background: pink;
   box-sizing: content-box;
 }
