--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,50 +1,12 @@
 <div class="header">
-  <div class="logo" (click)="collapsed = !collapsed"></div>
+  <div class="logo" (click)="collapsed = !collapsed">
+  </div>
 </div>
 <div class="layout">
   <div class="sidebar">
 
   </div>
   <div class="main">
-    <div class="editor-nav">
-      <button>Add</button>
-      <button>Delete</button>
-      <button>Undo</button>
-      <button>Redo</button>
-    </div>
-    <div class="wrapper">
-      <div>
-        <app-aspect-ratio (resized)="resizeElement($event, canvas)">
-          <canvas #canvas></canvas>
-        </app-aspect-ratio>
-      </div>
-      <div>
-        <app-aspect-ratio>
-          ok
-        </app-aspect-ratio>
-      </div>
-    </div>
-    <div class="wrapper">
-      <app-aspect-ratio>
-        ok
-      </app-aspect-ratio>
-    </div>
-    <div class="wrapper">
-      <div>
-        <app-aspect-ratio>
-          ok
-        </app-aspect-ratio>
-      </div>
-      <div>
-        <app-aspect-ratio>
-          ok
-        </app-aspect-ratio>
-      </div>
-      <div>
-        <app-aspect-ratio>
-          ok
-        </app-aspect-ratio>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
